@@ -1,5 +1,9 @@
 2003-08-09  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-document.c, cong-document.h, cong-node.h, tree.c, xmldata.c, xmledit.c, cong-menus.c
+
+	Added utilities for merging text, and for parsing fragments of XML, and inserting them into the document, together with a test routine in the debugging menu.
+
 	* cong-editor-area-flow-holder-inlines.c
 
 	Added some debug code
